--- a/.gitattributes
+++ b/.gitattributes
@@ -1,12 +1,11 @@
 * text=auto
 
-# Use Windows line endings for compatibility reasons
-*.xhtml eol=crlf
-*.opf eol=crlf
-*.ncx eol=crlf
-*.xml eol=crlf
-*.css eol=css
-
+# Configure line-endings
+*.xhtml eol=lf
+*.opf eol=lf
+*.ncx eol=lf
+*.xml eol=lf
+*.css eol=lf
 
 # Denote all files that are truly binary and should not be modified.
 *.png binary
