--- a/.gitattributes
+++ b/.gitattributes
@@ -7,6 +7,10 @@
 *.xml eol=lf
 *.css eol=lf
 
+# Windows-specific files
+*.bat text eol=crlf
+*.cmd text eol=crlf
+
 # Denote all files that are truly binary and should not be modified.
 *.png binary
 *.jpg binary
