--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,8 @@ buildscript {
   }
 
   dependencies {
-    classpath "com.github.jmbe:epub-gradle-plugin:0.4"
+    classpath "com.github.jmbe:epub-gradle-plugin:0.5"
+    // classpath "se.intem:epub-gradle-plugin:0.6-SNAPSHOT" // for local dev
   }
 }
 
@@ -15,6 +16,11 @@ plugins {
 
 subprojects {
   apply plugin: "se.intem.epub"
+
+  ncx {
+    // navFile = file("EPUB/nav.xhtml")
+    // ncxFile = file("EPUB/toc.ncx")
+  }
 
   epub {
     validate true
